tests/invalid/random_choices_weights_not_list_float/main.py
import random

if __name__ == "__main__":
    xs: list[int] = random.choices([1, 2, 3], weights=[1, 2, 3])
